Add workout templates & custom exercises
Introduce workout template and custom exercise backend support: added Flyway migrations (V3 create template tables, V4 widen exercise_id), new entities, DTOs, repositories, services, and controllers for /api/user/templates and /api/user/custom-exercises. Exercise search now accepts optional Authentication and delegates to exerciseService.searchExercises(q, user) so custom exercises can be merged into results. Also included multiple template-related request/response records and controller endpoints for creating/updating templates, days, and exercises. Update CORS config to allow PATCH requests.